@@ -9,6 +9,22 @@
       <article class="small-12 medium-10 large-8 column">
         <h1>${part.title} - Registration</h1>
         <form action="${r.route_url('part.register', pid=part.id)}" method="post">
+          <div>
+            <py:if test="part.register_state(r.current_user) != 'already_registered'">
+              <form py:if="part.register_state(r.current_user) == 'plain_register'" action="${r.route_url('part.register', pid=part.id)}">
+                <input type="submit" value="Take this Module" class="button small"/>
+              </form>
+              <form py:if="part.register_state(r.current_user) == 'password_register'" action="${r.route_url('part.register', pid=part.id)}">
+                <p>This module's content is password protected. Please provide the correct password to access its content.</p>
+                <div class="row collapse">
+                  ${h.form.field('password', '', h.form.tags.password_field, size='small-12 medium-6 large-4', e=e)}
+                  <div class="small-12 medium-3 large-3 column end"><input type="submit" value="Take this Module" class="button postfix"/></div>
+                </div>
+              </form>
+              <p py:if="part.register_state(r.current_user) == 'invalid_email_domain'" class="alert-box warning">Unfortunately you cannot take this module as your e-mail address is not
+                in the list of authorised e-mail domains.</p>
+            </py:if>
+          </div>
           <div class="text-right">
             <a py:if="'parent_id' in r.params" href="${r.route_url('part.view', pid=part.id)}" class="button small secondary">Don't Register</a>
             ${h.form.tags.submit('Register', class_='button small')}
