@@ -1,0 +1,48 @@
+<!DOCTYPE html>
+<html xmlns:py="http://genshi.edgewall.org/" xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="../layout/layout.html"/>
+  <head>
+    <title>${part.title} - Access Settings</title>
+    <script src="${r.static_url('wte:static/js/mathjax/MathJax.js', _query=[('config', 'default')])}"></script>
+  </head>
+  <body>
+    <div class="row">
+      <h1 class="small-12 column">${part.title} - Access Settings</h1>
+    </div>
+    <div class="row">
+      <article id="editor" class="small-12 medium-10 large-8 column end">
+        <form action="${r.route_url('part.register.settings', pid=part.id)}" method="post">
+          <fieldset>
+            <legend>Password required</legend>
+            <label><input type="checkbox" name="require" value="password" py:attrs="{'checked': 'checked' if 'password' in rights else None}"/> Enabled</label>
+            <label>Password
+              <input type="text" name="password" value="${rights['password'] if 'password' in rights else ''}" py:attrs="{'disabled': 'disabled' if 'password' not in rights else None}"/>
+            </label>
+          </fieldset>
+          <fieldset>
+            <legend>E-Mail domain limited</legend>
+            <label><input type="checkbox" name="require" value="email_domains" py:attrs="{'checked': 'checked' if 'email_domains' in rights else None}"/> Enabled</label>
+            <label>E-Mail domains (comma-separated)
+              <input type="text" name="email_domains" value="${', '.join(rights['email_domains']) if 'email_domains' in rights else ''}" py:attrs="{'disabled': 'disabled' if 'email_domains' not in rights else None}"/>
+            </label>
+          </fieldset>
+          <div class="text-right">
+            <a href="${r.route_url('part.view', pid=part.id)}" class="button small secondary">Don't Change</a>
+            ${h.form.tags.submit('Change Settings', class_='button small')}
+          </div>
+        </form>
+      </article>
+    </div>
+    <script>
+    $('fieldset input[type=checkbox]').on('change', function() {
+    	var checkbox = $(this);
+    	if(checkbox.is(':checked')) {
+    		checkbox.parent().parent().find('input[type=text]').removeAttr('disabled');
+    		checkbox.parent().parent().find('input[type=text]').first().focus();
+    	} else {
+            checkbox.parent().parent().find('input[type=text]').attr('disabled', 'disabled');
+    	}
+    });
+    </script>
+  </body>
+</html>
